<resources>
    <string name="app_name">Projeto A2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_historia">Nossa História</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_salas">Salas</string>
    <string name="menu_redes">Redes Sociais</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>